--- a/QuantTrade.Tests/QuantTrade.Tests.csproj
+++ b/QuantTrade.Tests/QuantTrade.Tests.csproj
@@ -52,16 +52,12 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Providers\CSVProviderTests.cs" />
+    <Compile Include="CSVProviderTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QuantTrade.Algorithm\QuantTrade.Alogrithm.csproj">
       <Project>{738bb688-0cf3-4102-925e-6e9df488756c}</Project>
       <Name>QuantTrade.Alogrithm</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\QuantTrade.Configuration\QuantTrade.Configuration\QuantTrade.Configuration.csproj">
-      <Project>{f9009555-eafb-40a3-b3f3-1b3e37f4228b}</Project>
-      <Name>QuantTrade.Configuration</Name>
     </ProjectReference>
     <ProjectReference Include="..\QuantTrade.Core\QuantTrade.Core\QuantTrade.Core.csproj">
       <Project>{ff8af88e-4105-4ee2-bb41-2ae10f6d3064}</Project>
