--- a/QuantTrade.Algorithm/QuantTrade.Alogrithm.csproj
+++ b/QuantTrade.Algorithm/QuantTrade.Alogrithm.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interfaces\IAlogorithm.cs" />
-    <Compile Include="SimpleAlogrithm.cs" />
+    <Compile Include="Algorithms\SimpleAlogrithm.cs" />
     <Compile Include="Interfaces\BaseAlgorithm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -54,6 +54,9 @@
       <Project>{b7e87263-1052-43f3-9cb9-0883ea69f8c4}</Project>
       <Name>QuantTrade.Data</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Indicators\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
