--- a/QuantTrade.Tests/QuantTrade.Tests.csproj
+++ b/QuantTrade.Tests/QuantTrade.Tests.csproj
@@ -55,17 +55,9 @@
     <Compile Include="CSVProviderTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\QuantTrade.Algorithm\QuantTrade.Alogrithm.csproj">
-      <Project>{738bb688-0cf3-4102-925e-6e9df488756c}</Project>
-      <Name>QuantTrade.Alogrithm</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\QuantTrade.Core\QuantTrade.Core\QuantTrade.Core.csproj">
+    <ProjectReference Include="..\QuantTrade.Core\QuantTrade.Core.csproj">
       <Project>{ff8af88e-4105-4ee2-bb41-2ae10f6d3064}</Project>
       <Name>QuantTrade.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\QuantTrade.Data\QuantTrade.Data.csproj">
-      <Project>{B7E87263-1052-43F3-9CB9-0883EA69F8C4}</Project>
-      <Name>QuantTrade.Data</Name>
     </ProjectReference>
     <ProjectReference Include="..\QuantTrade.Engine\QuantTrade.Engine.csproj">
       <Project>{313a6f58-c4cb-4665-80c3-281ddf3986fb}</Project>
