--- a/QuantTrade.Tests/QuantTrade.Tests.csproj
+++ b/QuantTrade.Tests/QuantTrade.Tests.csproj
@@ -52,7 +52,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CSVProviderTests.cs" />
+    <Compile Include="AlgoTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QuantTrade.Core\QuantTrade.Core.csproj">
