--- a/QuantTrade.Core/QuantTrade.Core.csproj
+++ b/QuantTrade.Core/QuantTrade.Core.csproj
@@ -45,23 +45,26 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Algorithms\BaseAlgorithm.cs" />
-    <Compile Include="Algorithms\IAlogorithm.cs" />
+    <Compile Include="Interfaces\IAlogorithm.cs" />
     <Compile Include="Algorithms\SimpleAlogrithm.cs" />
     <Compile Include="Configuration\Config.cs" />
     <Compile Include="Data\DataGenerators\AlphaAdvantage.cs" />
-    <Compile Include="Data\DataGenerators\IGenerator.cs" />
+    <Compile Include="Interfaces\IGenerator.cs" />
     <Compile Include="Data\DataReaders\CSVReader.cs" />
-    <Compile Include="Data\DataReaders\IDataReader.cs" />
-    <Compile Include="Enums.cs" />
-    <Compile Include="Events.cs" />
+    <Compile Include="Interfaces\IDataReader.cs" />
+    <Compile Include="Interfaces\Enums.cs" />
+    <Compile Include="Interfaces\Events.cs" />
     <Compile Include="Indicators\BaseIndicator.cs" />
     <Compile Include="Indicators\SimpleMovingAverage.cs" />
-    <Compile Include="Indicators\IIndicator.cs" />
+    <Compile Include="Interfaces\IIndicator.cs" />
     <Compile Include="Indicators\ExponentialMovingAverage.cs" />
     <Compile Include="Indicators\RelativeStrengthIndex.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Securities\Portfolio.cs" />
+    <Compile Include="Securities\Order.cs" />
+    <Compile Include="Securities\Stock.cs" />
+    <Compile Include="Securities\Broker.cs" />
     <Compile Include="Securities\TradeBar.cs" />
+    <Compile Include="Utilities\Logger.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
