--- a/QuantTrade.Engine/Config.json
+++ b/QuantTrade.Engine/Config.json
@@ -3,5 +3,8 @@
   "default-alogrithm": "RSI2Alogrithm",
   "api-key": "1CP91IVE5IWVQE4A",
   "transaction-log": "C:\\Zip\\QuantTrade\\QuantTrade\\QuantTrade.Core\\Downloads\\transactions.csv",
-  "allow-margin" :  "true"
+  "results-log": "C:\\Zip\\QuantTrade\\QuantTrade\\QuantTrade.Core\\Downloads\\results.log",
+  "allow-margin": "true",
+  "symbols" :  "SPXL TQQQ UDOW"
+  
 }
