--- a/QuantTrade.Engine/Config.json
+++ b/QuantTrade.Engine/Config.json
@@ -5,7 +5,7 @@
   "transaction-log": "C:\\Zip\\QuantTrade\\QuantTrade\\QuantTrade.Core\\Downloads\\transactions.csv",
   "results-log": "C:\\Zip\\QuantTrade\\QuantTrade\\QuantTrade.Core\\Downloads\\results.log",
   "allow-margin": "true",
-  "buyandhold-stocks": "SPY XLV",
-  "swingtrade-stocks" :  "XLV"
+  "buyandhold-stocks": "",
+  "swingtrade-stocks" :  "TQQQ SPXL BIB SOXL UDOW TNA"
   
 }
