--- a/QuantTrade.Engine/Config.json
+++ b/QuantTrade.Engine/Config.json
@@ -1,11 +1,11 @@
 ﻿{
   "data-directory": "C:\\Zip\\QuantTrade\\QuantTrade\\QuantTrade.Core\\Downloads",
-  "default-alogrithm": "RSI2Alogrithm",
+  "default-alogrithm": "RSI2Algorithm",
   "api-key": "1CP91IVE5IWVQE4A",
   "transaction-log": "C:\\Zip\\QuantTrade\\QuantTrade\\QuantTrade.Core\\Downloads\\transactions.csv",
   "results-log": "C:\\Zip\\QuantTrade\\QuantTrade\\QuantTrade.Core\\Downloads\\results.log",
   "allow-margin": "true",
-  "buyandhold-stocks": "",
-  "swingtrade-stocks" :  "TQQQ SPXL BIB SOXL UDOW TNA"
+  "buyandhold-stocks": "SPY",
+  "swingtrade-stocks" :  "SPXL TQQQ UPRO BIB SOXL"
   
 }
