--- a/QuantTrade.Tests/QuantTrade.Tests.csproj
+++ b/QuantTrade.Tests/QuantTrade.Tests.csproj
@@ -51,8 +51,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BrokerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AlgoTests.cs" />
+    <Compile Include="IndicatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QuantTrade.Core\QuantTrade.Core.csproj">
