--- a/QuantTrade.Engine/Config.json
+++ b/QuantTrade.Engine/Config.json
@@ -7,8 +7,8 @@
   "allow-margin": "true",
   "transaction-fee": "7",
   "starting-cash": "10000",
-  "buyandhold-stocks": "",
-  "swingtrade-stocks": "BIB",
+  "buyandhold-stocks": "SPY",
+  "swingtrade-stocks": "SPXL TQQQ UDOW BIB SOXL",
   "Comments": "SPXL TQQQ UDOW BIB SOXL"
   
 }
