--- a/QuantTrade.UI/Config.json
+++ b/QuantTrade.UI/Config.json
@@ -1,17 +1,17 @@
 ﻿{
-  "data-directory": "C:\\Zip\\QuantTrade\\QuantTrade\\QuantTrade.Core\\Downloads",
+  "data-directory": "..\\..\\..\\QuantTrade.Core\\downloads\\",
+  "summary-report-log": "..\\..\\..\\QuantTrade.Core\\downloads\\SummaryReport.log",
+  "transaction-log-location": "..\\..\\..\\QuantTrade.Core\\downloads\\",
+  "enable-transaction-logging": "false",
   "default-alogrithm": "RSI2Algorithm",
   "alpha-api-key": "1CP91IVE5IWVQE4A",
   "data-source": "AlphaAdvantage",
-  "enable-transaction-logging": "false",
-  "randomize-data" :  "false",
-  "transaction-log-location": "C:\\Zip\\QuantTrade\\QuantTrade\\QuantTrade.Core\\Downloads\\",
-  "summary-report-log": "C:\\Zip\\QuantTrade\\QuantTrade\\QuantTrade.Core\\Downloads\\SummaryReport.log",
+  "randomize-data" : "false",
   "allow-margin": "true",
   "transaction-fee": "7",
   "starting-cash": "10000",
   "buyandhold-stocks": "SPY",
-  "swingtrade-stocks": "SPXL BIB",
+  "swingtrade-stocks": "SPXL TQQQ",
   "Comments": "SPXL TQQQ UDOW BIB SOXL"
   
 }
