--- a/QuantTrade.UI/Config.json
+++ b/QuantTrade.UI/Config.json
@@ -11,7 +11,7 @@
   "transaction-fee": "7",
   "starting-cash": "10000",
   "buyandhold-stocks": "SPY",
-  "swingtrade-stocks": "SPXL",
+  "swingtrade-stocks": "SPY",
   "Comments": ""
   
 }
